# sc-demo

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: agent_teams.md  product_spec.md  questions.md
src/vulnscan/: __init__.py  __main__.py  cli.py  crawler.py  models.py  reporter.py  scanner.py  sensitive.py  xss.py
src/vulnscan/detectors/: __init__.py  base.py  sensitive.py  sqli.py  xss.py
src/vulnscan/payloads/: __init__.py  sensitive.yaml  sqli.yaml  xss.yaml
tests/: README.md  conftest.py  test_crawler.py  test_integration.py  test_payloads.py  test_scanner.py  test_sensitive.py  test_xss.py
